--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "lib": ["es2017"],
+    "lib": [
+      "es2017"
+    ],
     "jsx": "react-native",
     "noResolve": false,
     "noImplicitAny": false,
@@ -11,9 +13,14 @@
     "target": "es5",
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
-    "declaration": true
+    "declaration": true,
+    "outDir": "dist"
   },
   "compileOnSave": true,
-  "exclude": ["node_modules"],
-  "include": ["./index.ts"]
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "./index.ts"
+  ],
 }
